[package]
name = "dashboard-app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.23"
egui_extras = "0.23"
eframe = "0.23"
image = "0.24"
winapi = { version = "0.3", features = ["windef", "winuser", "combaseapi", "basetsd", "ntdef", "minwindef"] }

[build-dependencies]
winresource = "0.1.17"
